use 200 over 204 status, updated tests
